--- a/class9-chapter-5.html
+++ b/class9-chapter-5.html
@@ -15,7 +15,7 @@
 
 	<link rel="canonical" href="https://demo-basic.adminkit.io/" />
 
-	<title>AdminKit Demo - Bootstrap 5 Admin Template</title>
+	<title>Computer Applications Workbook Solution - Rishikesh Sahani</title>
 	<link rel="stylesheet" type="text/css" href="/css/class9-wb-chap-5.css" media=”screen” />
 	<link href="css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
