--- a/class10-chapter-3.html
+++ b/class10-chapter-3.html
@@ -382,16 +382,16 @@
 
 					
 					<p style="margin-bottom: 25px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="images/class10/chapter3/1.jpg"></p>
+						display: block;" src="images/class10/c3-1.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="images/class10/chapter3/2.jpg"></p>
+						display: block;" src="images/class10/c3-2.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="images/class10/chapter3/3.jpg"></p>
+						display: block;" src="images/class10/c3-3.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="images/class10/chapter3/4.jpg"></p
+						display: block;" src="images/class10/c3-4.jpg"></p
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
 						display: block;" src="images/class10/chapter3/5.jpg"></p>
