--- a/class10-chapter-2.html
+++ b/class10-chapter-2.html
@@ -385,37 +385,37 @@
 
 
 					<p style="margin-bottom: 25px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/1.jpg"></p>
+						display: block;" src="images/class10/c2-1.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/2.jpg"></p>
+						display: block;" src="images/class10/c2-2.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/3.jpg"></p>
+						display: block;" src="images/class10/c2-3.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/4.jpg"></p>
+						display: block;" src="images/class10/c2-4.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/5.jpg"></p>
+						display: block;" src="images/class10/c2-5.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/6.jpg"></p>	
+						display: block;" src="images/class10/c2-6.jpg"></p>	
 		
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/7.jpg"></p>
+						display: block;" src="images/class10/c2-7.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/8.jpg"></p>
+						display: block;" src="images/class10/c2-8.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/9.jpg"></p>
+						display: block;" src="images/class10/c2-9.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/10.jpg"></p>
+						display: block;" src="images/class10/c2-10.jpg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="class-10/chapter-2/11.jpg"></p>
+						display: block;" src="images/class10/c2-11.jpg"></p>
 
 
 
