--- a/class9-chapter-5.html
+++ b/class9-chapter-5.html
@@ -384,11 +384,10 @@
 					<h1 class="h3 mb-3"><strong>Chapter</strong> 5</h1>
 
 
-					<p class="c6"><span
-							style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 602.00px; height: 522.67px;"><img
+					<p class="c6"><img
 								alt="" src="images/image1.png"
-								style="width: 602.00px; height: 522.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-								title=""></span></p>
+								style="max-width: 100%;	max-height: 100%; display: block;"
+								title=""></p>
 					<p class="c6 c9"><span class="c0"></span></p>
 					<p class="c6"><span class="c0 c8">Q3. What do you mean by an object and a class?</span></p>
 					<p class="c6"><span class="c0">Ans:</span></p>
