--- a/class9-chapter-7.html
+++ b/class9-chapter-7.html
@@ -379,11 +379,10 @@
 				<div class="container-fluid p-0">
 
 					<h1 class="h3 mb-3"><strong>Chapter</strong> 7</h1>
-					<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 154.67px;"><img
+					<p class="c2"><img
 							alt="" src="images/image3.png"
-							style="width: 727.76px; height: 154.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2 c4"><span class="c1"></span></p>
 				<ol class="c5 lst-kix_2kdm1rrzpn8h-0 start" start="1">
 					<li class="c2 c3 li-bullet-0"><span class="c1">lang</span></li>
@@ -394,11 +393,10 @@
 					<li class="c2 c3 li-bullet-0"><span class="c1">9.0</span></li>
 				</ol>
 				<p class="c2 c4"><span class="c1"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 694.00px; height: 148.00px;"><img
+				<p class="c2"><img
 							alt="" src="images/image2.png"
-							style="width: 694.00px; height: 148.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2 c4"><span class="c1"></span></p>
 				<ol class="c5 lst-kix_l0qy0k7kipr4-0 start" start="1">
 					<li class="c2 c3 li-bullet-0"><span class="c1">True</span></li>
@@ -408,11 +406,10 @@
 					<li class="c2 c3 li-bullet-0"><span class="c1">True</span></li>
 				</ol>
 				<p class="c2 c4"><span class="c1"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 117.33px;"><img
+				<p class="c2"><img
 							alt="" src="images/image9.png"
-							style="width: 727.76px; height: 117.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2 c4"><span class="c1"></span></p>
 				<ol class="c5 lst-kix_nc5dop34ellm-0 start" start="1">
 					<li class="c2 c3 li-bullet-0"><span class="c1">2116</span></li>
@@ -429,11 +426,10 @@
 					<li class="c2 c3 li-bullet-0"><span class="c1">43.0</span></li>
 				</ol>
 				<p class="c2 c4 c8"><span class="c1"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 108.00px;"><img
+				<p class="c2"><img
 							alt="" src="images/image4.png"
-							style="width: 727.76px; height: 108.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2 c4"><span class="c1"></span></p>
 				<ol class="c5 lst-kix_2e5o095b1agx-0 start" start="1">
 					<li class="c2 c3 li-bullet-0"><span class="c0">F = Mat.abs(a+7) + Math.abs(b*2) * a * b</span></li>
@@ -446,11 +442,10 @@
 				</ol>
 				<p class="c2 c4"><span class="c0"></span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 121.33px;"><img
+				<p class="c2"><img
 							alt="" src="images/image10.png"
-							style="width: 727.76px; height: 121.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2 c4"><span class="c0"></span></p>
 				<p class="c2"><span class="c0">Ans:</span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
@@ -475,11 +470,10 @@
 				<p class="c2"><span class="c0">}</span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 122.67px;"><img
+				<p class="c2"><img
 							alt="" src="images/image6.png"
-							style="width: 727.76px; height: 122.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2"><span class="c0">Ans:</span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
 				<p class="c2"><span class="c0">public class q6</span></p>
@@ -503,11 +497,10 @@
 				<p class="c2"><span class="c0">33.0</span></p>
 				<p class="c2"><span class="c0">14.0</span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 114.67px;"><img
+				<p class="c2"><img
 							alt="" src="images/image8.png"
-							style="width: 727.76px; height: 114.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2 c4"><span class="c0"></span></p>
 				<p class="c2"><span class="c0">import java.util.*;</span></p>
 				<p class="c2"><span class="c0">public class q7</span></p>
@@ -528,11 +521,10 @@
 				<p class="c2"><span class="c0">&nbsp; &nbsp; }</span></p>
 				<p class="c2"><span class="c0">}</span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 126.67px;"><img
+				<p class="c2"><img
 							alt="" src="images/image1_c7.png"
-							style="width: 727.76px; height: 126.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2"><span class="c0">Ans:</span></p>
 				<p class="c2"><span class="c0">import java.util.*;</span></p>
 				<p class="c2"><span class="c0">public class q8</span></p>
@@ -562,11 +554,10 @@
 				<p class="c2"><span class="c0">&nbsp; &nbsp; }</span></p>
 				<p class="c2"><span class="c0">}</span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 57.33px;"><img
+				<p class="c2"><img
 							alt="" src="images/image5.png"
-							style="width: 727.76px; height: 57.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2"><span class="c0">Ans:</span></p>
 				<p class="c2"><span class="c0">import java.util.*;</span></p>
 				<p class="c2"><span class="c0">public class q9</span></p>
@@ -592,11 +583,10 @@
 				<p class="c2 c4"><span class="c0"></span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
 				<p class="c2 c4"><span class="c0"></span></p>
-				<p class="c2"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 727.76px; height: 102.67px;"><img
+				<p class="c2"><img
 							alt="" src="images/image7.png"
-							style="width: 727.76px; height: 102.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-							title=""></span></p>
+							style="max-width: 100%;	max-height: 100%; display: block;"
+							title=""></p>
 				<p class="c2"><span class="c0">Ans:</span></p>
 				<p class="c2"><span class="c0">import java.util.*;</span></p>
 				<p class="c2"><span class="c0">public class q10</span></p>
