--- a/class10-chapter-7.html
+++ b/class10-chapter-7.html
@@ -25,7 +25,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" href="index.html">
-          <span class="align-middle">Workbook</span>
+          <span class="align-middle">Computer Applications Workbook</span>
         </a>
 
 				<ul class="sidebar-nav">
@@ -33,7 +33,7 @@
 						Class 9
 					</li>
 
-					<li class="sidebar-item active">
+					<li class="sidebar-item">
 						<a class="sidebar-link" href="index.html"> 
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Main</span>
             </a>
@@ -101,7 +101,7 @@
 
 					
 
-					<li class="sidebar-header">
+					<li class="sidebar-header" style="font-size:20px; font-weight:bold;">
 						Class 10
 					</li>
 
@@ -147,7 +147,7 @@
             </a>
 					</li>
 
-					<li class="sidebar-item">
+					<li class="sidebar-item active">
 						<a class="sidebar-link" href="class10-chapter-7.html">
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Chapter 7</span>
             </a>
