--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
 
-					<li class="sidebar-header">
+					<li class="sidebar-header" style="font-size:20px; font-weight:bold;">
 						Class 10
 					</li>
 
