--- a/class9-chapter-5.html
+++ b/class9-chapter-5.html
@@ -26,7 +26,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" href="index.html">
-					<span class="align-middle">Workbook</span>
+					<span class="align-middle">Computer Applications Workbook</span>
 				</a>
 
 				<ul class="sidebar-nav">
@@ -34,7 +34,7 @@
 						Class 9
 					</li>
 
-					<li class="sidebar-item active">
+					<li class="sidebar-item">
 						<a class="sidebar-link" href="index.html">
 							<i class="align-middle" data-feather="book"></i> <span class="align-middle">Main</span>
 						</a>
@@ -64,7 +64,7 @@
 						</a>
 					</li>
 
-					<li class="sidebar-item">
+					<li class="sidebar-item active">
 						<a class="sidebar-link" href="class9-chapter-5.html">
 							<i class="align-middle" data-feather="book"></i> <span class="align-middle">Chapter 5</span>
 						</a>
@@ -103,7 +103,7 @@
 
 
 
-					<li class="sidebar-header">
+					<li class="sidebar-header" style="font-size:20px; font-weight:bold;">
 						Class 10
 					</li>
 
