--- a/class9-chapter-3.html
+++ b/class9-chapter-3.html
@@ -51,7 +51,7 @@
             </a>
 					</li>
 
-					<li class="sidebar-item">
+					<li class="sidebar-item active">
 						<a class="sidebar-link" href="class9-chapter-3.html">
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Chapter 3</span>
             </a>
