--- a/class9-chapter-2.html
+++ b/class9-chapter-2.html
@@ -45,7 +45,7 @@
             </a>
 					</li>
 
-					<li class="sidebar-item">
+					<li class="sidebar-item active">
 						<a class="sidebar-link" href="class9-chapter-2.html">  
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Chapter 2</span>
             </a>
