--- a/class9-chapter-8.html
+++ b/class9-chapter-8.html
@@ -208,8 +208,7 @@
 					<p class="c1"><span class="c0">20 &gt; 13 ? 20 : 13 &rarr; &nbsp;S = 20</span></p>
 					<p class="c1"><span class="c0">12 &gt; 21 ? 12 : 21 &rarr; &nbsp;S = 21</span></p>
 					<p class="c1 c2"><span class="c0"></span></p>
-					<p class="c1"><span
-							style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 717.87px; height: 80.00px;"><img
+					<p class="c1"><img
 								alt="" src="images/chap8/image8.png"
 								style="width: 717.87px; height: 80.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
 								title=""></span></p>
