--- a/class9-chapter-9.html
+++ b/class9-chapter-9.html
@@ -207,11 +207,10 @@
 					<p class="c1"><span
 							class="c0">3&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;9&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;12&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;13
 						</span></p>
-					<p class="c1"><span
-							style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 533.00px; height: 25.00px;"><img
+					<p class="c1"><img
 								alt="" src="images/chap9/image39.png"
-								style="width: 533.00px; height: 25.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-								title=""></span></p>
+								style="max-width: 100%;	max-height: 100%; display: block;"
+								title=""></p>
 					<p class="c1"><span class="c0">Ans:</span></p>
 					<p class="c1 c3"><span class="c0"></span></p>
 					<p class="c1"><span class="c0">for(int i &nbsp;= 0; i &lt;= 20; i++)</span></p>
