--- a/class9-chapter-8.html
+++ b/class9-chapter-8.html
@@ -459,11 +459,10 @@
 								style="max-width: 100%;	max-height: 100%; display: block;"
 								title=""></p>
 					<p class="c1 c2"><span class="c0"></span></p>
-					<p class="c1"><span
-							style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 717.87px; height: 190.67px;"><img
+					<p class="c1"><img
 								alt="" src="images/chap8/image35.png"
-								style="width: 717.87px; height: 190.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-								title=""></span></p>
+								style="max-width: 100%;	max-height: 100%; display: block;"
+								title=""></p>
 					<p class="c1"><span class="c0">import java.util.Scanner;</span></p>
 					<p class="c1"><span class="c0">public class p13</span></p>
 					<p class="c1"><span class="c0">{</span></p>
@@ -640,11 +639,10 @@
 					<p class="c1"><span class="c0">int y = (y &gt;= 150) ? y*15 : y-15;</span></p>
 					<p class="c1 c2"><span class="c0"></span></p>
 					<p class="c1 c2"><span class="c0"></span></p>
-					<p class="c1"><span
-							style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 717.87px; height: 65.33px;"><img
+					<p class="c1"><img
 								alt="" src="images/chap8/image2.png"
-								style="width: 717.87px; height: 65.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-								title=""></span></p>
+								style="max-width: 100%;	max-height: 100%; display: block;"
+								title=""></p>
 					<p class="c1"><span class="c0">Ans:</span></p>
 					<p class="c1 c2"><span class="c0"></span></p>
 					<p class="c1"><span class="c0">if(m &gt; 300)</span></p>
@@ -661,11 +659,10 @@
 					<p class="c1 c2"><span class="c0"></span></p>
 					<p class="c1"><span class="c0">char res = (mark &gt; 300) ? &lsquo;P&rsquo; :
 							&lsquo;F&rsquo;;</span></p>
-					<p class="c1"><span
-							style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 717.87px; height: 184.00px;"><img
+					<p class="c1"><img
 								alt="" src="images/chap8/image30.png"
-								style="width: 717.87px; height: 184.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-								title=""></span></p>
+								style="max-width: 100%;	max-height: 100%; display: block;"
+								title=""></p>
 					<p class="c1"><span class="c0">Ans:</span></p>
 					<p class="c1 c2"><span class="c0"></span></p>
 					<p class="c1"><span class="c0">int n = 0;</span></p>
