--- a/class9-chapter-8.html
+++ b/class9-chapter-8.html
@@ -210,8 +210,8 @@
 					<p class="c1 c2"><span class="c0"></span></p>
 					<p class="c1"><img
 								alt="" src="images/chap8/image8.png"
-								style="width: 717.87px; height: 80.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-								title=""></span></p>
+								style="max-width: 100%;	max-height: 100%; display: block;"
+								title=""></p>
 					<p class="c1"><span class="c0">Ans:</span></p>
 					<p class="c1 c2"><span class="c0"></span></p>
 					<p class="c1"><span class="c0">350 &gt; 300 ? &lsquo;P&rsquo; : &lsquo;I&rsquo; &nbsp;&rarr; S =
