--- a/class9-chapter-1.html
+++ b/class9-chapter-1.html
@@ -195,7 +195,18 @@
 				<div class="container-fluid p-0">
 
 					<h1 class="h3 mb-3"><strong>Chapter</strong> 1</h1>
-					<h5 style="font-size: 25px;">Work In Progress!!! </h5>
+
+					<p style="margin-bottom: 25px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c1_1.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c1_2.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c1_3.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c1_3.jpeg"></p>
 
 					
 
