--- a/class9-chapter-2.html
+++ b/class9-chapter-2.html
@@ -196,7 +196,17 @@
 
 					<h1 class="h3 mb-3"><strong>Chapter</strong> 2</h1>
 
-					
+					<p style="margin-bottom: 25px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c2_1.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c2_2.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c2_3.jpeg"></p>
+
+					<!-- <p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c2_4.jpeg"></p> -->
 
 					
 
