--- a/class9-chapter-3.html
+++ b/class9-chapter-3.html
@@ -196,7 +196,23 @@
 
 					<h1 class="h3 mb-3"><strong>Chapter</strong> 3</h1>
 
-					
+					<p style="margin-bottom: 25px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c3_1.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c3_2.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c3_3.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c3_4.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c3_5.jpeg"></p>
+
+					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
+						display: block;" src="images/class9/class9_c3_6.jpeg"></p>
 
 					
 
