--- a/class9-chapter-2.html
+++ b/class9-chapter-2.html
@@ -117,7 +117,7 @@
             </a>
 					</li>
 
-					<li class="sidebar-item active">
+					<li class="sidebar-item">
 						<a class="sidebar-link" href="class10-chapter-2.html">
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Chapter 2</span>
             </a>
