--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 					<iframe style =" margin-top: 20px;" src="https://www.youtube.com/embed/videoseries?list=PLVQsZt7_MJazuwJW5qB6IumlsK_AqXQ1p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="text-align: right;"></iframe>	
 					
 					
-					<a href="/docs/Class_X_project_Solution.pdf">Class 10 Project Solution</a>
+					<a href="/docs/Class10_project.pdf">Class 10 Project Solution</a>
 
 
 
