--- a/index.html
+++ b/index.html
@@ -211,7 +211,12 @@
 					<iframe style =" margin-top: 20px;" src="https://www.youtube.com/embed/videoseries?list=PLVQsZt7_MJazuwJW5qB6IumlsK_AqXQ1p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="text-align: right;"></iframe>	 -->
 					
 					
-					<a href="Class10_project.pdf" target="_blank">Class 10 Project Solution</a>
+					<p>
+						<a href="Class10_project.pdf" target="_blank" id="a1">Class 10 Project Solution</a>
+					</p>
+					<p>
+						<a href="Class9_project.pdf" target="_blank" id="a2">Class 9 Project Solution</a>
+					</p>
 
 
 
