--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
 					<p>
 						<a href="Class9_project.pdf" target="_blank" id="a2">Class 9 Project Solution</a>
 					</p>
-					<p>
+					<p class="note_main">
 						<b>Note: The pdf above contains programs only. Please write the 
 							<span class = "note"> output </span>
-							and <span class = "note">variable description table </span>yourself
+							and <span class = "note">variable description table </span>yourself.
 						</b>
 					</p>
 
