--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 						<a href="Class10_project.pdf" target="_blank" id="a1">Class 10 Project Solution</a>
 					</p>
 					<p>
-						<a href="Class9_project.pdf" target="_blank" id="a2">Class 9 Project Solution</a>
+						<a href="Class9_Project.pdf" target="_blank" id="a2">Class 9 Project Solution</a>
 					</p>
 					<p class="note_main">
 						<b>Note: The pdf above contains programs only. Please write the 
