--- a/class10-chapter-4.html
+++ b/class10-chapter-4.html
@@ -206,7 +206,7 @@
 						display: block;" src="images/class10/c4_3.jpeg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
-						display: block;" src="images/class10/c4_4.jpeg"></p
+						display: block;" src="images/class10/c4_4.jpeg"></p>
 
 					<p style="margin: bottom 40px;"><img alt="" style="max-width: 100%;	max-height: 100%;
 						display: block;" src="images/class10/c4_5.jpeg"></p>
