--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
 						</b>
 					</p>
 
+					<p>
+						<a href="Class 11 WB.html" target="_blank" id="a2">Class 11 Workbook Solution</a>
+					</p>
+
 
 
 
