--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
 					<p>
 						<a href="Class-11-WB.html" target="_blank" id="a3">Class 11 Workbook Solution</a>
 					</p>
+					<p>
+						<a href="class11-project-solution.html" target="_blank" id="a3">Class 11 Project Solution</a>
+					</p>
+					
 
 
 
