--- a/class10-chapter-7.html
+++ b/class10-chapter-7.html
@@ -164,8 +164,10 @@
 
 <body class="c3 doc-content">
         <p class="c1"><span class="c0">
-        <a href="class-10-array-wb.pdf">For better view dowload PDF version here</a>
-        <br><br>
+        <h1><a href="class-10-array-wb.pdf">For better view dowload PDF version here</a>
+        </h1>
+        <br>
+        </span>
         </p>
         <p class="c1"><span class="c0">&mdash;Question 1&mdash;</span></p>
         <p class="c1 c2"><span class="c0"></span></p>
