--- a/class9-chapter-10.html
+++ b/class9-chapter-10.html
@@ -197,10 +197,9 @@
 					<h1 class="h3 mb-3"><strong>Chapter</strong> 10</h1>
 
 					
-					<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 575.00px; height: 41.00px;"><img
+					<p class="c1"><img
 							alt="" src="images/chap10/image1.png"
-							style="width: 575.00px; height: 41.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">When on loop is placed inside another loop it is called nested loop</span></p>
 				<p class="c1"><span class="c0">for(int i=1;i&lt;5;i++)</span></p>
@@ -209,22 +208,19 @@
 				<p class="c1 c4"><span class="c0">{</span></p>
 				<p class="c1 c4"><span class="c0">}</span></p>
 				<p class="c1"><span class="c0">}</span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 599.00px; height: 38.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image2.png"
-							style="width: 599.00px; height: 38.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">The control comes out of the inner loop</span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 597.00px; height: 56.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image3.png"
-							style="width: 597.00px; height: 56.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">The control comes out of the second and innermost loop</span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 67.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image4.png"
-							style="width: 600.00px; height: 67.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">It takes the control to the update statement in case of for loop and to the condition
 						part of </span></p>
@@ -237,15 +233,13 @@
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1"><span class="c0">Output: 1 3 5 7 9</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 183.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image5.png"
-							style="width: 600.00px; height: 183.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 100.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image6.png"
-							style="width: 600.00px; height: 100.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">public class MyClass {</span></p>
 				<p class="c1"><span class="c0">&nbsp; &nbsp; public static void main( ) {</span></p>
@@ -261,10 +255,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; }</span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 111.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image7.png"
-							style="width: 600.00px; height: 111.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class b</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -284,10 +277,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 114.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image8.png"
-							style="width: 600.00px; height: 114.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class b</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -307,10 +299,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 162.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image9.png"
-							style="width: 600.00px; height: 162.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class b</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -330,10 +321,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 116.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image10.png"
-							style="width: 600.00px; height: 116.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class a</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -353,10 +343,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 126.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image11.png"
-							style="width: 600.00px; height: 126.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class d</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -376,10 +365,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 145.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image12.png"
-							style="width: 600.00px; height: 145.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class e</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -399,10 +387,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 143.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image13.png"
-							style="width: 600.00px; height: 143.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
 				<p class="c1"><span class="c0">class f</span></p>
@@ -423,10 +410,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 108.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image14.png"
-							style="width: 600.00px; height: 108.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class g</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -447,10 +433,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 115.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image15.png"
-							style="width: 600.00px; height: 115.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class h</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -475,10 +460,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 61.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image16.png"
-							style="width: 600.00px; height: 61.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1"><span class="c0">class i</span></p>
 				<p class="c1"><span class="c0">{</span></p>
@@ -503,10 +487,9 @@
 				<p class="c1"><span class="c0">&nbsp; &nbsp; </span></p>
 				<p class="c1"><span class="c0">}</span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
-				<p class="c1"><span
-						style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 600.00px; height: 127.00px;"><img
+				<p class="c1"><img
 							alt="" src="images/chap10/image17.png"
-							style="width: 600.00px; height: 127.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+							style="max-width: 100%;	max-height: 100%; display: block;"
 							title=""></span></p>
 				<p class="c1 c2"><span class="c0"></span></p>
 				<p class="c1"><span class="c0">class j</span></p>
