--- a/index.html
+++ b/index.html
@@ -217,7 +217,10 @@
 						<a href="Class-11-WB.html" target="_blank" id="a3">Class 11 Workbook Solution</a>
 					</p>
 					<p>
-						<a href="class11-project-solution.html" target="_blank" id="a3">Class 11 Project Solution</a>
+						<a href="class11-project-solution.html" target="_blank" id="a3">Class 11 Lab</a>
+					</p>
+					<p>
+						<a href="https://docs.google.com/document/d/1w6pQgqbwL_P3JmYO7q3UyzYp7kft1qAXnK4-oR6CUoU/edit?usp=sharing" target="_blank" id="a3">Class 11 Project Solution</a>
 					</p>
 					
 
