--- a/index.html
+++ b/index.html
@@ -201,10 +201,14 @@
 					
 					
 					<p>
-						<a href="Class10_project.pdf" target="_blank" id="a1">Class 10 Project Solution</a>
+						<a href="https://www.youtube.com/@discover108/playlists" target="_blank" id="a0">Learn Computer On YouTube</a>
+					</p>
+
+					<p>
+						<a href="Class10_project.pdf" target="_blank" id="a1">Class 10 Lab Manual</a>
 					</p>
 					<p>
-						<a href="Class9_Project.pdf" target="_blank" id="a2">Class 9 Project Solution</a>
+						<a href="Class9_Project.pdf" target="_blank" id="a2">Class 9 Lab Manual</a>
 					</p>
 					<p class="note_main">
 						<b>Note: The pdf above contains programs only. Please write the 
