--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					
 					
 					<p>
-						<a href="https://www.youtube.com/@discover108/playlists" target="_blank" id="a0">Learn Java On YouTube!! </a> <b>Pls Like, Subscribe and Comment If You Find it Helpful<b>
+						<a href="https://www.youtube.com/@discover108/playlists" target="_blank" id="a0">Learn Java On YouTube!! <img src="giphy.gif"></a> 
 					</p>
 
 					<p>
