--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 					<div class="div1">
 						<p><a href="https://www.youtube.com/@discover108/playlists" target="_blank" id="a0">Learn Java On YouTube!! </a> </p>
-						<p><img class="YouTube_child" src="images/giphy.gif"></p>
+						<p>---Like, Share, Comment and Subscribe If Helpful---</p>
 					</div>
 
 					<p>
