--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
 					<iframe style =" margin-top: 20px;" src="https://www.youtube.com/embed/videoseries?list=PLVQsZt7_MJazuwJW5qB6IumlsK_AqXQ1p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="text-align: right;"></iframe>	 -->
 
 
-					<div class="div1">
-						<p><a href="https://www.youtube.com/@discover108/playlists" target="_blank" id="a0">Learn Java On YouTube!! </a> </p>
-						<p>---Like, Share, Comment and Subscribe If Helpful---</p>
-					</div>
+					
+					<p id="youtube"><img  src="images/giphy.gif" width="5%" height="5%"></p>
+					<p><a href="https://www.youtube.com/@discover108/playlists" target="_blank" id="a0">Learn Java On YouTube!! </a> </p>					
+					<p><img style="border: 0px;"></p>
 
 					<p>
 						<a href="Class10_project.pdf" target="_blank" id="a1">Class 10 Lab Manual</a>
