--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 
 
 					
-					<p id="youtube"><img  src="images/giphy.gif" width="5%" height="5%"></p>
+					<p id="youtube"><img class="circle-img" src="images/giphy.gif" width="5%" height="5%"></p>
 					<p><a href="https://www.youtube.com/@discover108/playlists" target="_blank" id="a0">Learn Java On YouTube!! </a> </p>					
-					<p><img style="border: 0px;"></p>
+					<p><img  style="border: 0px; border-radius: 30px;"></p>
 
 					<p>
 						<a href="Class10_project.pdf" target="_blank" id="a1">Class 10 Lab Manual</a>
