--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 					<p><img  style="border: 0px; border-radius: 30px;"></p>
 
 					<p>
-						<a href="Class10_project.pdf" target="_blank" id="a1">Class 10 Lab Manual</a>
+						<a href="Class10-LM.pdf" target="_blank" id="a1">Class 10 Lab Manual</a>
 					</p>
 
 					<p>
